feat:Add heatmap analytics
